checked accessability with Glen, noted that index.html had weird contrast issues with background image

--- a/src/css/blogstyles.css
+++ b/src/css/blogstyles.css
@@ -20,7 +20,8 @@ body {
 }
 
 .blogLink {
-    color: rgb(114, 185, 86);
+    color: rgb(143, 231, 108);
+    font-weight: bold;
 }
 
 .blogContainer {
