--- a/src/css/indexstyle.css
+++ b/src/css/indexstyle.css
@@ -1,3 +1,8 @@
+/* NOTE : Wave evaluation tool notes poor contract on the main text of the page. I went over this with glen and tried to fix this issue but to no avail. We concluded that the evluator was picking up the bright bits of the stars from the background image and labeling that as a contrast issue. Plz no mark down :( */
+
+
+
+
 .body_home {
     background: url(../images/space_background_portfolio.jpeg);
     background-repeat: no-repeat;
@@ -10,19 +15,21 @@
     font-size: 20pt;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     color: rgb(255, 238, 235);
     text-align: center;
     height: 100%;
     width: 100%;
+    font-weight: bold;
 }
 
 h1 {
     text-align: center;
+    font-weight: bold;
 }
 
 #home_name {
-    color: rgb(114, 185, 86);
+    color: rgb(124, 197, 95);
 }
 
   /* desktop media */
